--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest --watchAll",
+    "test:ci": "jest --coverage"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "dependencies": {
     "@expo/samples": "^3.0.3",
@@ -25,7 +30,7 @@
     "@types/react": "^16.8.23",
     "@types/react-native": "^0.57.65",
     "babel-preset-expo": "^7.1.0",
-    "react-test-renderer": "^16.12.0",
+    "jest-expo": "^35.0.0",
     "typescript": "^3.6.3"
   },
   "private": true
