--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,3 +25,5 @@ jobs:
       uses: Borales/actions-yarn@v2.1.0
       with:
         cmd: test
+    - name: Code Climate Coverage Action
+      uses: paambaati/codeclimate-action@v2.3.0
