--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "react-native-firebase": "~5.5.6",
     "react-native-flat-button": "^1.0.6",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-htmlview": "^0.15.0",
+    "react-native-markdown-package": "^1.6.3",
     "react-native-reanimated": "~1.2.0",
+    "react-native-render-html": "^4.2.0",
     "react-native-web": "^0.11.7",
+    "react-native-webview": "^8.0.6",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.5.6"
@@ -33,6 +37,7 @@
     "@types/jest": "^24.0.23",
     "@types/react": "^16.8.23",
     "@types/react-native": "^0.57.65",
+    "@types/react-native-htmlview": "^0.12.2",
     "babel-preset-expo": "^7.1.0",
     "jest-expo": "^35.0.0",
     "typescript": "^3.6.3"
