--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-check-box": "^2.1.7",
     "react-native-firebase": "~5.5.6",
     "react-native-flat-button": "^1.0.6",
     "react-native-gesture-handler": "~1.3.0",
@@ -28,7 +29,7 @@
     "react-native-reanimated": "~1.2.0",
     "react-native-render-html": "^4.2.0",
     "react-native-web": "^0.11.7",
-    "react-native-webview": "^8.0.6",
+    "react-native-webview": "7.0.5",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.5.6"
