--- a/app.json
+++ b/app.json
@@ -23,6 +23,8 @@
     "android": {
       "package": "com.yourcompany.steelpark",
       "versionCode": 1
+      "name" : "Steelpark",
+      "displayName" : "Steelpark"
     }
   }
 }
