--- a/app.json
+++ b/app.json
@@ -1,4 +1,6 @@
 {
+  "name": "Steelpark",
+  "displayName": "Steelpark",
   "expo": {
     "name": "Steelpark",
     "slug": "steelpark-app-expo",
@@ -18,7 +20,9 @@
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.yourcompany.steelpark",
+      "buildNumber": "1.0.0"
     },
     "android": {
       "package": "com.yourcompany.steelpark",
